--- a/mycart.html
+++ b/mycart.html
@@ -30,151 +30,29 @@
             </div>
             <div class="main-cart">
                 <div class="left-mainCart">
-                    <div class="card">
-                        <div class="item-image">
-                            <img src="./assets/image 1.png" alt="image1">
-                        </div>
-                        <div class="item-details">
-                            <div class="item-colors">
-                                <div class="color-name">
-                                    Title : Shirt
-                                </div>
-                            </div>
-                            <div class="price">
-                                 Rating : 3.9/5
-                            </div>
-                        </div>
-                        <div class="addToCartBtn">
-                            <button type="submit" id="removeFromCart">Remove From Cart</button>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="item-image">
-                            <img src="./assets/image 1.png" alt="image1">
-                        </div>
-                        <div class="item-details">
-                            <div class="item-colors">
-                                <div class="color-name">
-                                    Title : Shirt
-                                </div>
-                            </div>
-                            <div class="price">
-                                 Rating : 3.9/5
-                            </div>
-                        </div>
-                        <div class="addToCartBtn">
-                            <button type="submit" id="removeFromCart">Remove From Cart</button>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="item-image">
-                            <img src="./assets/image 1.png" alt="image1">
-                        </div>
-                        <div class="item-details">
-                            <div class="item-colors">
-                                <div class="color-name">
-                                    Title : Shirt
-                                </div>
-                            </div>
-                            <div class="price">
-                                 Rating : 3.9/5
-                            </div>
-                        </div>
-                        <div class="addToCartBtn">
-                            <button type="submit" id="removeFromCart">Remove From Cart</button>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="item-image">
-                            <img src="./assets/image 1.png" alt="image1">
-                        </div>
-                        <div class="item-details">
-                            <div class="item-colors">
-                                <div class="color-name">
-                                    Title : Shirt
-                                </div>
-                            </div>
-                            <div class="price">
-                                 Rating : 3.9/5
-                            </div>
-                        </div>
-                        <div class="addToCartBtn">
-                            <button type="submit" id="removeFromCart">Remove From Cart</button>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="item-image">
-                            <img src="./assets/image 1.png" alt="image1">
-                        </div>
-                        <div class="item-details">
-                            <div class="item-colors">
-                                <div class="color-name">
-                                    Title : Shirt
-                                </div>
-                            </div>
-                            <div class="price">
-                                 Rating : 3.9/5
-                            </div>
-                        </div>
-                        <div class="addToCartBtn">
-                            <button type="submit" id="removeFromCart">Remove From Cart</button>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="item-image">
-                            <img src="./assets/image 1.png" alt="image1">
-                        </div>
-                        <div class="item-details">
-                            <div class="item-colors">
-                                <div class="color-name">
-                                    Title : Shirt
-                                </div>
-                            </div>
-                            <div class="price">
-                                 Rating : 3.9/5
-                            </div>
-                        </div>
-                        <div class="addToCartBtn">
-                            <button type="submit" id="removeFromCart">Remove From Cart</button>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="item-image">
-                            <img src="./assets/image 1.png" alt="image1">
-                        </div>
-                        <div class="item-details">
-                            <div class="item-colors">
-                                <div class="color-name">
-                                    Title : Shirt
-                                </div>
-                            </div>
-                            <div class="price">
-                                 Rating : 3.9/5
-                            </div>
-                        </div>
-                        <div class="addToCartBtn">
-                            <button type="submit" id="removeFromCart">Remove From Cart</button>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="right-mainCart">
                     <div class="checkout-name">
                         Checkout List
                     </div>
-                    <div class="checkout-items">
-                        <div class="checkout-item-name">
+                    <div class="ci">
+                        <!-- <div class="checkout-items">
+                            <div class="checkout-item-name">
                            1. Shirt
-                        </div>
-                        <div class="checkout-price">
-                            $100
-                        </div>
+                            </div>
+                            <div class="checkout-price">
+                                $100
+                            </div> 
+                        </div> -->
+                        
                     </div>
                     <div class="totalAmt">
                         <div class="total">
                             Total
                         </div>
                         <div class="amt">
-                            $900/-
+                            $0/-
                         </div>
                     </div>
                     <div class="checkoutBtn">
